Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
igt@i915_selftest@live_(evict|uncore|gt_mocs) - fail - probe of 0000:00:02.0 failed with error -11
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7618/fi-kbl-r/igt@i915_selftest@live_gt_mocs.html
Starting subtest: live_gt_mocs
(i915_selftest:4652) igt_kmod-WARNING: Setting dangerous option live_selftests - tainting kernel
(i915_selftest:4652) igt_kmod-WARNING: i915 0000:00:02.0: [drm:i915_driver_probe [i915]] WOPCM: 1024K
(i915_selftest:4652) igt_kmod-WARNING: i915 0000:00:02.0: [drm:intel_uc_init_early [i915]] enable_guc=0 (guc:no submission:no huc:no)
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_pch_type [i915]] Found SunrisePoint LP PCH
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_power_domains_init [i915]] Allowed DC state mask 02
(i915_selftest:4652) igt_kmod-WARNING: [drm:i915_ggtt_probe_hw [i915]] GGTT size = 4096M
(i915_selftest:4652) igt_kmod-WARNING: [drm:i915_ggtt_probe_hw [i915]] GMADR size = 512M
(i915_selftest:4652) igt_kmod-WARNING: [drm:i915_ggtt_probe_hw [i915]] DSM size = 32M
(i915_selftest:4652) igt_kmod-WARNING: i915 0000:00:02.0: VT-d active for gfx access
(i915_selftest:4652) igt_kmod-WARNING: i915 0000:00:02.0: vgaarb: deactivate vga console
(i915_selftest:4652) igt_kmod-WARNING: [drm:init_stolen [i915]] GEN6_STOLEN_RESERVED = 3ff00047
(i915_selftest:4652) igt_kmod-WARNING: [drm:init_stolen [i915]] Memory reserved for graphics device: 32768K, usable: 31744K
(i915_selftest:4652) igt_kmod-WARNING: [drm:i915_driver_probe [i915]] Initialized 5 GT workarounds on global
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_gvt_init [i915]] GVT-g is disabled by kernel params
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_opregion_setup [i915]] graphic opregion physical addr: 0x3d286018
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_opregion_setup [i915]] ACPI OpRegion version 2.0.0
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_opregion_setup [i915]] Public ACPI methods supported
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_opregion_setup [i915]] SWSCI supported
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_opregion_setup [i915]] SWSCI GBDA callbacks 00000cb3, SBCB callbacks 00300583
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_opregion_setup [i915]] ASLE supported
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_opregion_setup [i915]] ASLE extension supported
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_opregion_setup [i915]] Found valid VBT in ACPI OpRegion (Mailbox #4)
(i915_selftest:4652) igt_kmod-WARNING: [drm:i915_driver_probe [i915]] DRAM type: DDR4
(i915_selftest:4652) igt_kmod-WARNING: [drm:skl_dram_get_dimm_info [i915]] CH0 DIMM L size: 4 GB, width: X16, ranks: 1, 16Gb DIMMs: no
(i915_selftest:4652) igt_kmod-WARNING: [drm:skl_dram_get_dimm_info [i915]] CH0 DIMM S size: 0 GB, width: X0, ranks: 0, 16Gb DIMMs: no
(i915_selftest:4652) igt_kmod-WARNING: [drm:skl_dram_get_channel_info [i915]] CH0 ranks: 1, 16Gb DIMMs: no
(i915_selftest:4652) igt_kmod-WARNING: [drm:skl_dram_get_dimm_info [i915]] CH1 DIMM L size: 4 GB, width: X16, ranks: 1, 16Gb DIMMs: no
(i915_selftest:4652) igt_kmod-WARNING: [drm:skl_dram_get_dimm_info [i915]] CH1 DIMM S size: 0 GB, width: X0, ranks: 0, 16Gb DIMMs: no
(i915_selftest:4652) igt_kmod-WARNING: [drm:skl_dram_get_channel_info [i915]] CH1 ranks: 1, 16Gb DIMMs: no
(i915_selftest:4652) igt_kmod-WARNING: [drm:i915_driver_probe [i915]] Memory configuration is symmetric? yes
(i915_selftest:4652) igt_kmod-WARNING: [drm:i915_driver_probe [i915]] DRAM bandwidth: 38400000 kBps, channels: 2
(i915_selftest:4652) igt_kmod-WARNING: [drm:i915_driver_probe [i915]] DRAM ranks: 1, 16Gb DIMMs: no
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_bios_init [i915]] Skipping VBT init due to disabled display.
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_dsm_detect [i915]] no _DSM method for intel device
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_power_domains_init_hw [i915]] rawclk rate: 24000 kHz
(i915_selftest:4652) igt_kmod-WARNING: [drm:gen9_set_dc_state [i915]] Setting DC state from 00 to 00
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_power_well_enable [i915]] enabling power well 1
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_power_well_enable [i915]] enabling MISC IO power well
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_dump_cdclk_state [i915]] Current CDCLK 337500 kHz, VCO 8100000 kHz, ref 24000 kHz, bypass 24000 kHz, voltage level 0
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_update_max_cdclk [i915]] Max CD clock rate: 675000 kHz
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_cdclk_init [i915]] Max dotclock rate: 675000 kHz
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_power_well_enable [i915]] enabling always-on
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_power_well_enable [i915]] enabling DC off
(i915_selftest:4652) igt_kmod-WARNING: [drm:gen9_set_dc_state [i915]] Setting DC state from 00 to 00
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_power_well_enable [i915]] enabling power well 2
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_power_well_enable [i915]] enabling DDI A/E IO power well
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_power_well_enable [i915]] enabling DDI B IO power well
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_power_well_enable [i915]] enabling DDI C IO power well
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_power_well_enable [i915]] enabling DDI D IO power well
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_csr_ucode_init [i915]] Loading i915/kbl_dmc_ver1_04.bin
(i915_selftest:4652) igt_kmod-WARNING: [drm] Finished loading DMC firmware i915/kbl_dmc_ver1_04.bin (v1.4)
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_fbc_init [i915]] Sanitized enable_fbc value: 1
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_print_wm_latency [i915]] Gen9 Plane WM0 latency 2 (2.0 usec)
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_print_wm_latency [i915]] Gen9 Plane WM1 latency 19 (19.0 usec)
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_print_wm_latency [i915]] Gen9 Plane WM2 latency 28 (28.0 usec)
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_print_wm_latency [i915]] Gen9 Plane WM3 latency 32 (32.0 usec)
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_print_wm_latency [i915]] Gen9 Plane WM4 latency 63 (63.0 usec)
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_print_wm_latency [i915]] Gen9 Plane WM5 latency 77 (77.0 usec)
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_print_wm_latency [i915]] Gen9 Plane WM6 latency 83 (83.0 usec)
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_print_wm_latency [i915]] Gen9 Plane WM7 latency 99 (99.0 usec)
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_modeset_init [i915]] 3 display pipes available.
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_dump_cdclk_state [i915]] Current CDCLK 337500 kHz, VCO 8100000 kHz, ref 24000 kHz, bypass 24000 kHz, voltage level 0
(i915_selftest:4652) igt_kmod-WARNING: mei_hdcp 0000:00:16.0-b638ab7e-94e2-4ea2-a552-d1c54b627f04: bound 0000:00:02.0 (ops i915_hdcp_component_ops [i915])
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_modeset_setup_hw_state [i915]] DPLL 0 hw state readout: crtc_mask 0x00000000, on 1
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_modeset_setup_hw_state [i915]] DPLL 1 hw state readout: crtc_mask 0x00000000, on 0
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_modeset_setup_hw_state [i915]] DPLL 2 hw state readout: crtc_mask 0x00000000, on 0
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_modeset_setup_hw_state [i915]] DPLL 3 hw state readout: crtc_mask 0x00000000, on 0
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_modeset_setup_hw_state [i915]] DPLL 0 enabled but not in use, disabling
(i915_selftest:4652) igt_kmod-WARNING: [drm:i915_init_ggtt [i915]] clearing unused GTT space: [1000, 100000000]
(i915_selftest:4652) igt_kmod-WARNING: [drm:i915_gem_init [i915]] logical context support initialized
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_engines_setup [i915]] Initialized 5 engine workarounds on rcs'0
(i915_selftest:4652) igt_kmod-WARNING: [drm:intel_engines_setup [i915]] Initialized 5 whitelist workarounds on rcs'0
(i915_selftest:4652) igt_kmod-WARNING: [drm:__intel_engine_init_ctx_wa [i915]] Initialized 14 context workarounds on rcs'0
(i915_selftest:4652) igt_kmod-WARNING: i915 0000:00:02.0: Device initialization failed (-11)
(i915_selftest:4652) igt_kmod-WARNING: i915: probe of 0000:00:02.0 failed with error -11
(i915_selftest:4652) igt_kmod-CRITICAL: Test assertion failure function igt_kselftest_execute, file ../lib/igt_kmod.c:588:
(i915_selftest:4652) igt_kmod-CRITICAL: Failed assertion: err == 0
(i915_selftest:4652) igt_kmod-CRITICAL: kselftest "i915 igt__19__live_gt_mocs=1 live_selftests=-1 disable_display=1 st_filter=" failed: Operation not permitted [1]
Subtest live_gt_mocs failed.
````